--- a/src/css/FAQs.css
+++ b/src/css/FAQs.css
@@ -2,7 +2,9 @@
     max-width: 100%;
     margin: 0 auto;
     padding: 20px;
-    background: linear-gradient(135deg, rgb(253, 9, 106), #4a90e2); /* Linear gradient */
+    background-color: #0b0c10;
+
+    /* background: linear-gradient(135deg, rgb(253, 9, 106), #4a90e2); Linear gradient */
   }
   
   .faq-item {
@@ -20,10 +22,12 @@
     color: #fff;
     border-radius: 5px;
     transition: background-color 0.3s;
+    box-shadow: 1px 0px 15px #66fcf1; /* Shadow effect */
+
   }
   
   .faq-question:hover {
-    background: linear-gradient(135deg, rgb(118, 0, 0), #000000); /* Linear gradient */
+    background: linear-gradient(90deg, #1f2833, #66fcf1); /* Gradient background */
   }
   
   .faq-answer {
