--- a/src/css/AboutUs.css
+++ b/src/css/AboutUs.css
@@ -4,35 +4,27 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background-color: #f9f9f9;
+    background-color: #0b0c10;
 }
 
-/* Image Styling */
-.about-us-image {
-    max-width: 400px;
-    margin-right: 20px;
-}
-
-.about-us-image img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-}
 
 /* Content Styling */
 .about-us-content {
-    max-width: 600px;
+    max-width: 1000px;
     text-align: justify;
+    padding: 20px;
 }
 
 .about-us-content h1,
 .about-us-content h2 {
-    margin: 10px 0;
+    margin: 10px;
+    color: #66fcf1;
 }
 
 .about-us-content p {
     line-height: 1.6;
     margin: 10px 0;
+     color: #ffffff;
 }
 
 /* Responsive Design */
