--- a/src/css/InspirationalImage.css
+++ b/src/css/InspirationalImage.css
@@ -4,6 +4,7 @@
     align-items: center; /* Aligns items to the right */
     padding: 10px;
     text-align: center; /* Aligns text to the right */
+    color: #66fcf1;
 }
 
 .widget {
