--- a/src/css/ImageGallery.css
+++ b/src/css/ImageGallery.css
@@ -97,6 +97,11 @@
  }
 
  @media screen and (max-width: 720px) {
+
+  .gallery-container{
+    margin-top: 20%;
+
+  }
   .modal-content {
     flex-direction: row;
     align-items: center;
