--- a/src/css/PastorsBio.css
+++ b/src/css/PastorsBio.css
@@ -20,11 +20,12 @@
 
 .pastor-image {
     width: 100%;
-    max-width: 200px;
+    max-width: 250px;
     max-height: 250px;
-    border-radius: 10px;
+    border-radius: 20px;
     margin-right: 20px; /* Space between image and text */
- }
+    object-fit: contain; /* Ensures the entire image is visible without distortion */
+}
 
 .pastor-content {
     padding: 0 15px;
